# cppcoin

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md
cmake/: StaticAnalysis.cmake
src/: blockchain.cpp  sha256.h
